// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TicTacToe/App Default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-0 .game-info .status {
  font-weight: bold;
}

.emotion-1 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div>
    <div
      className="emotion-0"
    >
      <div
        className="game-board"
      >
        <div
          className="emotion-1"
        >
          <div
            className="board-row"
          >
            <button
              className="emotion-2"
              data-testid="square: 0"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 1"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 2"
              onClick={[Function]}
            />
          </div>
          <div
            className="board-row"
          >
            <button
              className="emotion-2"
              data-testid="square: 3"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 4"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 5"
              onClick={[Function]}
            />
          </div>
          <div
            className="board-row"
          >
            <button
              className="emotion-2"
              data-testid="square: 6"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 7"
              onClick={[Function]}
            />
            <button
              className="emotion-2"
              data-testid="square: 8"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
      <div
        className="game-info"
      >
        <div
          className="status"
          data-testid="status"
        >
          Next Player: X
        </div>
        <ol>
          <li>
            <button
              onClick={[Function]}
            >
              Go to start
            </button>
          </li>
        </ol>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Board All O 1`] = `
.emotion-0 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 0"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 1"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 2"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 3"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 4"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 5"
        onClick={[Function]}
      >
        O
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 6"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 7"
        onClick={[Function]}
      >
        O
      </button>
      <button
        className="emotion-1"
        data-testid="square: 8"
        onClick={[Function]}
      >
        O
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Board All Triangle 1`] = `
.emotion-0 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 0"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 1"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 2"
        onClick={[Function]}
      >
        △
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 3"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 4"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 5"
        onClick={[Function]}
      >
        △
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 6"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 7"
        onClick={[Function]}
      >
        △
      </button>
      <button
        className="emotion-1"
        data-testid="square: 8"
        onClick={[Function]}
      >
        △
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Board All X 1`] = `
.emotion-0 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 0"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 1"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 2"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 3"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 4"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 5"
        onClick={[Function]}
      >
        X
      </button>
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 6"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 7"
        onClick={[Function]}
      >
        X
      </button>
      <button
        className="emotion-1"
        data-testid="square: 8"
        onClick={[Function]}
      >
        X
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Board Default 1`] = `
.emotion-0 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-1:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 0"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 1"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 2"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 3"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 4"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 5"
        onClick={[Function]}
      />
    </div>
    <div
      className="board-row"
    >
      <button
        className="emotion-1"
        data-testid="square: 6"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 7"
        onClick={[Function]}
      />
      <button
        className="emotion-1"
        data-testid="square: 8"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-0 .game-info .status {
  font-weight: bold;
}

.emotion-1 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 0"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 1"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 2"
            onClick={[Function]}
          />
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 3"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 4"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 5"
            onClick={[Function]}
          />
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 6"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 7"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 8"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="game-info"
    >
      <div
        className="status"
        data-testid="status"
      >
        Draw
      </div>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Draw 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-0 .game-info .status {
  font-weight: bold;
}

.emotion-1 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 0"
            onClick={[Function]}
          >
            O
          </button>
          <button
            className="emotion-2"
            data-testid="square: 1"
            onClick={[Function]}
          >
            X
          </button>
          <button
            className="emotion-2"
            data-testid="square: 2"
            onClick={[Function]}
          >
            O
          </button>
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 3"
            onClick={[Function]}
          >
            X
          </button>
          <button
            className="emotion-2"
            data-testid="square: 4"
            onClick={[Function]}
          >
            O
          </button>
          <button
            className="emotion-2"
            data-testid="square: 5"
            onClick={[Function]}
          >
            X
          </button>
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 6"
            onClick={[Function]}
          >
            X
          </button>
          <button
            className="emotion-2"
            data-testid="square: 7"
            onClick={[Function]}
          >
            O
          </button>
          <button
            className="emotion-2"
            data-testid="square: 8"
            onClick={[Function]}
          >
            X
          </button>
        </div>
      </div>
    </div>
    <div
      className="game-info"
    >
      <div
        className="status"
        data-testid="status"
      >
        Draw
      </div>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Win O 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-0 .game-info .status {
  font-weight: bold;
}

.emotion-1 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 0"
            onClick={[Function]}
          >
            O
          </button>
          <button
            className="emotion-2"
            data-testid="square: 1"
            onClick={[Function]}
          >
            O
          </button>
          <button
            className="emotion-2"
            data-testid="square: 2"
            onClick={[Function]}
          >
            O
          </button>
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 3"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 4"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 5"
            onClick={[Function]}
          />
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 6"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 7"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 8"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="game-info"
    >
      <div
        className="status"
        data-testid="status"
      >
        Winner: O
      </div>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Game Win X 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 .game-info {
  margin-left: 1rem;
}

.emotion-0 .game-info .status {
  font-weight: bold;
}

.emotion-1 .board-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="game-board"
    >
      <div
        className="emotion-1"
      >
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 0"
            onClick={[Function]}
          >
            X
          </button>
          <button
            className="emotion-2"
            data-testid="square: 1"
            onClick={[Function]}
          >
            X
          </button>
          <button
            className="emotion-2"
            data-testid="square: 2"
            onClick={[Function]}
          >
            X
          </button>
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 3"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 4"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 5"
            onClick={[Function]}
          />
        </div>
        <div
          className="board-row"
        >
          <button
            className="emotion-2"
            data-testid="square: 6"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 7"
            onClick={[Function]}
          />
          <button
            className="emotion-2"
            data-testid="square: 8"
            onClick={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="game-info"
    >
      <div
        className="status"
        data-testid="status"
      >
        Winner: X
      </div>
      <ol>
        <li>
          <button
            onClick={[Function]}
          >
            Go to start
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`Storyshots TicTacToe/Square Default 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots TicTacToe/Square O 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  >
    O
  </button>
</div>
`;

exports[`Storyshots TicTacToe/Square X 1`] = `
.emotion-0 {
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #999;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  margin: -1px -1px 0 0;
  padding: 0;
  text-align: center;
  width: 34px;
}

.emotion-0:focus {
  outline: none;
}

<div>
  <button
    className="emotion-0"
    data-testid="square: 0"
    onClick={[Function]}
  >
    X
  </button>
</div>
`;
